<resources>
    <string name="app_name">irdb</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="welcome_title">IRDB</string>
    <string name="build_text">測試編號：1.1.07040332</string>
    <string name="prompt_email">E-Mail</string>
    <string name="prompt_password">密碼</string>
    <string name="prompt_login">登入</string>
    <string name="prompt_register">註冊</string>
    <string name="take_photo">拍照</string>

    <string name="setting_language">語系</string>
    <string name="setting_receiver">接收器</string>
    <string name="setting_transmitter">發射器</string>


</resources>
